syntax = "proto3";

package gossip.v1;

import "google/protobuf/empty.proto";


service Gossip {
    rpc PullMembers (PullMembersRequest) returns (PullMembersResponse) {}
    rpc PushHeartbeat(Heartbeat) returns (google.protobuf.Empty) {}
    rpc PushMembersUpdate(MembersUpdate) returns (google.protobuf.Empty) {}
    rpc Join(JoinRequest) returns (JoinResponse) {}
}

message PullMembersRequest {
    // Empty message.
}

message PullMembersResponse {
    string name = 1;
    repeated Member members = 2;
}

message MembersUpdate {
    string name = 1;
    repeated Member members = 3;
}

message Member {
    string name = 1;
    string host = 2;
    int32 port = 3;
    uint64 index = 4;
    int64 timestamp = 5;
    int64 start_time = 6;
}

message Heartbeat {
    Member originator = 1;
}

message JoinRequest {
    Member origiator = 1;
    string destination_host = 2;

}

message JoinResponse {
    string originator_host = 1;
    repeated Member members = 3;
}
